--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flake8==3.8.3
 Flask==1.1.2
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.8
+Flask-SQLAlchemy==2.4.4
 importlib-metadata==1.7.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -14,6 +15,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.4.0
+mysqlclient==2.0.1
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
@@ -22,13 +24,18 @@ pydocstyle==5.0.2
 pyflakes==2.2.0
 PyJWT==1.4.2
 pylint==2.5.3
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.6
 PyMySQL==0.10.0
 pyparsing==2.4.7
 pytest==5.4.3
 pytz==2020.1
 rope==0.17.0
+simplejson==3.17.2
 six==1.15.0
 snowballstemmer==2.0.0
+SQLAlchemy==1.3.18
 toml==0.10.1
 typed-ast==1.4.1
 wcwidth==0.2.5
