--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==7.1.2
 flake8==3.8.3
 Flask==1.1.2
 Flask-JWT==0.3.2
+Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 importlib-metadata==1.7.0
@@ -22,7 +23,7 @@ py==1.9.0
 pycodestyle==2.6.0
 pydocstyle==5.0.2
 pyflakes==2.2.0
-PyJWT==1.4.2
+PyJWT==1.7.1
 pylint==2.5.3
 pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
