--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 aniso8601==8.0.0
+appdirs==1.4.4
 astroid==2.4.2
 attrs==19.3.0
+black==19.10b0
 click==7.1.2
 flake8==3.8.3
 Flask==1.1.2
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.24.1
+flask-marshmallow==0.13.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 importlib-metadata==1.7.0
@@ -14,10 +17,13 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+marshmallow==3.7.1
+marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
 more-itertools==8.4.0
 mysqlclient==2.0.1
 packaging==20.4
+pathspec==0.8.0
 pluggy==0.13.1
 py==1.9.0
 pycodestyle==2.6.0
@@ -32,6 +38,7 @@ PyMySQL==0.10.0
 pyparsing==2.4.7
 pytest==5.4.3
 pytz==2020.1
+regex==2020.7.14
 rope==0.17.0
 simplejson==3.17.2
 six==1.15.0
