--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.2
 aniso8601==8.0.0
 appdirs==1.4.4
 astroid==2.4.2
@@ -9,6 +10,7 @@ Flask==1.1.2
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.24.1
 flask-marshmallow==0.13.0
+Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 importlib-metadata==1.7.0
@@ -16,6 +18,7 @@ isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.7.1
 marshmallow-sqlalchemy==0.23.1
@@ -37,6 +40,9 @@ pylint-plugin-utils==0.6
 PyMySQL==0.10.0
 pyparsing==2.4.7
 pytest==5.4.3
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-editor==1.0.4
 pytz==2020.1
 regex==2020.7.14
 rope==0.17.0
