--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ appdirs==1.4.4
 astroid==2.4.2
 attrs==19.3.0
 black==19.10b0
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 flake8==3.8.3
 Flask==1.1.2
@@ -13,6 +15,7 @@ flask-marshmallow==0.13.0
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 importlib-metadata==1.7.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -45,12 +48,15 @@ python-dotenv==0.14.0
 python-editor==1.0.4
 pytz==2020.1
 regex==2020.7.14
+requests==2.24.0
 rope==0.17.0
 six==1.15.0
 snowballstemmer==2.0.0
 SQLAlchemy==1.3.18
+stripe==2.50.0
 toml==0.10.1
 typed-ast==1.4.1
+urllib3==1.25.10
 wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
